# kv-server-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  abi.proto  build.rs  cliff.toml  deny.toml
.github/workflows/: build.yml
benches/: pubsub.rs
examples/: client.rs  dummy_server.rs  gen_cert.rs  gen_config.rs  server.rs  server_codec.rs  server_sled.rs
fixtures/: ca.cert  ca.key  client.cert  client.key  server.cert  server.key
src/: client.rs  config.rs  error.rs  lib.rs  server.rs
src/network/: frame.rs  mod.rs  multiplex.rs  stream.rs  stream_result.rs  tls.rs
src/pb/: abi.rs  mod.rs
src/service/: command_service.rs  mod.rs  subscribe_gc.rs  topic.rs  topic_service.rs
src/storage/: memory.rs  mod.rs  sleddb.rs
tests/: server.rs
