[package]
name = "kv-server-rs"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
http = "1.3.1"
prost = "0.8"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.97"
async-prost = "0.2.1" # Obsoleted, support protofub to tcp frame
futures = "0.3.31"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"] }
tokio-rustls = "0.26.2"
tokio-util = { version = "0.7.14", features = ["codec"] }
tracing-subscriber = "0.3.19"

[build-dependencies]
prost-build = "0.13.5"
