[package]
name = "kv-server-rs"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
bytes = "1.10.1"
dashmap = "6.1.0"
flate2 = "1.1.0"
futures = "0.3.31"
http = "1.3.1"
prost = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
sled = "0.34.7"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tokio-rustls = "0.22" # Obsoleted
tokio-stream = { version = "0.1.17", features = ["sync"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["json", "chrono"] }
yamux = "0.13.4"

[dev-dependencies]
anyhow = "1.0.97"
async-prost = "0.2.1" # Obsoleted, support protofub to tcp frame
futures = "0.3.31"
rand = "0.9.0"
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"] }
tokio-util = { version = "0.7.14", features = ["codec"] }
tracing-subscriber = "0.3.19"

[build-dependencies]
prost-build = "0.13.5"
