[package]
name = "kv-server-rs"
version = "0.1.0"
license = "MIT"
edition = "2021"

[[bin]]
name = "kv-s"
path = "src/server.rs"

[[bin]]
name = "kv-c"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.97"
bytes = "1.10.1"
certify = "0.5.2"
criterion = { version = "0.5.1", features = ["async_futures", "async_tokio", "html_reports"] }
dashmap = "6.1.0"
flate2 = "1.1.0"
futures = "0.3.31"
http = "1.3.1"
opentelemetry = { version = "0.29.0", features = ["trace"] }
opentelemetry-jaeger = "0.22.0"
opentelemetry-jaeger-propagator = "0.29.0"
opentelemetry-otlp = { version = "0.29.0", features = ["metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.29.0", features = ["semconv_experimental"] }
opentelemetry_sdk = { version = "0.29.0", features = ["trace"] }
prost = "0.8"
rand = "0.9.0"
reqwest = { version = "0.12.15" }
rustls-native-certs = "0.8.1"
serde = { version = "1.0.219", features = ["derive"] }
sled = "0.34.7"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tokio-rustls = "0.22"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.14", features = ["compat"] }
toml = "0.8.20"
tracing = { version = "0.1.41", features = ["std"] }
tracing-appender = "0.2.3"
tracing-core = "0.1.33"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.0", features = ["fmt", "env-filter", "json", "chrono", "registry", "std"] }
yamux = "0.9"

[dev-dependencies]
async-prost = "0.2.1" # Obsoleted, support protofub to tcp frame
certify = "0.5.2"
futures = "0.3.31"
rand = "0.9.0"
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"] }
tokio-util = { version = "0.7.14", features = ["codec"] }

[build-dependencies]
prost-build = "0.13.5"


[[bench]]
name = "pubsub"
harness = false
